# keysafe

./: .bzrignore  .gitignore  .hgignore  AUTHORS  ChangeLog  MANIFEST.in  Makefile.am  NEWS  README  THOUGHTS  TODO  autogen.sh  configure.ac  keysafe  keysafe.in  ksed  ksed.in  setup.py  waf  wscript
gnome/: keysafe.desktop  keysafe.desktop.in  keysafe.schemas  ksed.desktop  ksed.desktop.in  wscript
gui/: keysafe.glade  keysafe.gladep  ksed.glade  ksed.gladep  wscript
libkeysafe/: __init__.py  __init__.py.in  cfg.py  crypto1.py  crypto2.py  ctrl.py  edgui.py  gui.py  oldsafe.py  safe.py  wscript
src/: crypto.cc  crypto.hh  cryptobotan.cc  cryptobotan.pyx  wscript
tools/: ksconv.in  ksdump.in  wscript
